--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-loader": "^5.3.2",
     "html-webpack-plugin": "^1.6.2",
+    "react-bootstrap": "^0.27.1",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
   },
